# newsletter

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.prod.yaml  config.yaml  spec.yaml
.github/workflows/: general.yml
migrations/: 20240602150819_create_subscriptions_table.sql
scripts/: dev.sh  init_db.sh
src/: config.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: mod.rs  subscribe.rs
tests/: health_check.rs
